<resources>
    <string name="app_name">mango</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="authorization_fragment">Authorization Fragment</string>
    <string name="code_verifier_fragment">Code Verifier Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="registration_fragment">Registration Fragment</string>
    <string name="change_profile_fragment">Change Profile Fragment</string>
    <string name="next">Далее</string>
    <string name="confirm">Подтвердить</string>
    <string name="authorize">Авторизироваться</string>
    <string name="register">Зарегистрироваться</string>
    <string name="previous">Previous</string>

    <string name="network_error">Произошла непредвиденная ошибка</string>
    <string name="phone_error">Некорректный номер телефона</string>
    <string name="code_error">Неверный код</string>

    <string name="code_verifier">Введите код, который пришёл на указанный номер телефона</string>
    <string name="hint_code_verifier">000000</string>


    <string name="phone_hint">Телефон</string>
    <string name="name_hint">Имя</string>
    <string name="user_name_hint">Username</string>


    <string name="phone">Телефон</string>
    <string name="name">Имя</string>
    <string name="username">Username</string>
    <string name="birthday">Дата рождения</string>
    <string name="city">Город</string>
    <string name="instagram">Инстаграм</string>
    <string name="vk">ВК</string>
    <string name="status">Статус</string>
    <string name="created">Дата создания аккаунта</string>
    <string name="completed_task">Выполнено задач</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>